--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,10 +10,7 @@ header {
 	font-family: 'Georgia', Times, Times New Roman, serif;
 	color: #777777;
 	background-color: #ffffff;
-	border-color: #cccccc;
-	border-bottom-style: solid;
-	border-width: 1px;
-	border-color: black;
+	box-shadow: 10px 10px 10px #888888;
 	width: 100%;
 	float: left;
 }
@@ -28,18 +25,21 @@ hr {
 h1 {
 	
 	color: white;
-	width: 12%;
-	margin: 0px 10px 0px 50px;
+	font-size: 30px;
+	width: 205px;
+	margin: 10px 0px 10px 50px;
 	padding: 10px 0px 10px 10px;
 	background-color: #4aaaa5;
 	float: left;
+	box-shadow: 10px 10px 10px #888888;
 
 }
 
 h2 {
 	
+	font-size: 25px;
+	font-weight: bold;
 	color: #4aaaa5;
-
 	margin: 0px 10px 0px 0px;
 	padding: 10px 0px 10px 10px;
 	
@@ -49,7 +49,7 @@ h2 {
 
 	float: right;
 	padding: 10px 0px 10px 10px;
-	margin: 0px 10px 0px 10px;
+	margin: 20px 10px 0px 10px;
 
 }
 
@@ -57,7 +57,7 @@ h2 {
 
 	float: right;
 	padding: 10px 0px 10px 10px;
-	margin: 0px 10px 0px 10px;
+	margin: 20px 10px 0px 10px;
 
 }
 
@@ -65,8 +65,19 @@ h2 {
 
 	float: right;
 	padding: 10px 0px 10px 10px;
-	margin: 0px 100px 0px 10px;
+	margin: 20px 100px 0px 10px;
 
+}
+
+.line {
+
+	float: right;
+	width: 1px;
+	height: 30px;
+	background-color: darkgrey;
+	display: block;
+	padding: 0px 1px 0px 1px;
+	margin: 25px 1px 10px 1px;
 }
 
 .me {
@@ -80,12 +91,19 @@ h2 {
 
 }
 
+.center {
+
+	text-align: center;
+	margin: 1em 1em 1em 1em;
+}
+
 #mesection {
 
 	width: 600px;
 	float: left;
 	margin: 20px 0px 0px 50px;
 	padding: 0px 0px 0px 0px;
+	box-shadow: 10px 10px 10px #888888;
 	
 }
 
@@ -102,6 +120,7 @@ h2 {
 	margin: 20px 0px 0px 20px;
 	padding: 00px 0px 0px 0px;
 
+
 }
 
 .connect {
@@ -111,6 +130,7 @@ h2 {
 	content: "";
 	display: table;
 	clear: both;
+	box-shadow: 10px 10px 10px #888888;
 
 }
 
@@ -125,9 +145,13 @@ h2 {
 
 footer {
 
+	border-top-style: solid;
+	border-width: 0.5em;
+	border-color: #4aaaa5;
+	box-shadow: 10px 10px 10px #888888;
 	position: absolute;
 	left: 0;
-	bottom: 0;
+	bottom: 20px;
 	width: 960px;
 	background-color: darkgrey;
 	
